--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "algoliasearch": "^4.14.3",
+    "expo": "^47.0.13",
+    "expo-camera": "^13.2.1",
+    "expo-cli": "^6.1.0",
+    "expo-dev-client": "~2.0.1",
+    "expo-status-bar": "^1.4.2",
+    "firebase": "^9.16.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-indicators": "^0.17.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-marquee": "^0.4.0",
+    "react-native-purchases": "^5.7.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-webview": "^11.23.1",
+    "search-insights": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
