--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "algoliasearch": "^4.14.3",
@@ -18,6 +19,10 @@
     "expo-camera": "^13.2.1",
     "expo-cli": "^6.1.0",
     "expo-dev-client": "~2.0.1",
+    "expo-font": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "^1.4.2",
     "firebase": "^9.16.0",
     "react": "18.1.0",
@@ -25,6 +30,7 @@
     "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-marquee": "^0.4.0",
     "react-native-purchases": "^5.7.0",
