--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-webview": "^11.23.1",
-    "search-insights": "^2.3.0"
+    "search-insights": "^2.3.0",
+    "expo-blur": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
